k8s-namespace-onboarding/generated/catalog-development/05-network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  labels:
    app.kubernetes.io/managed-by: k8s-namespace-onboarding
    platform.example.com/team: catalog
    platform.example.com/environment: development
  namespace: catalog-development
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  labels:
    app.kubernetes.io/managed-by: k8s-namespace-onboarding
    platform.example.com/team: catalog
    platform.example.com/environment: development
  namespace: catalog-development
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
